// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar should not render if no active profile 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="sc-fzoyAV bqFbiw"
  >
    <div
      class="sm:px-6 lg:px- px-4"
    >
      <div
        class="md:h-24 relative flex justify-between h-20"
      >
        <div
          class="flex items-center flex-shrink-0"
        >
          <div
            class="bg-logo flex p-2 mr-4 rounded-lg"
          >
            <img
              alt="ARK Logo"
              class="md:h-8 lg:h-10 h-6"
              src="ark-logo.png"
            />
          </div>
          <ul
            class="md:h-24 flex h-20"
          >
            <li
              class="flex"
            >
              <a
                class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                href="/test"
                title="test"
              >
                test
              </a>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  notification.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
          >
            <a
              data-testid="navbar__buttons--send"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </a>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
          >
            <button
              class="sc-AxiKw bMHbXM"
              color="primary"
              data-testid="navbar__buttons--receive"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="p-2 ml-4 text-right"
          >
            <div
              class="text-theme-neutral text-xs"
            >
              Your balance
            </div>
            <div
              class="text-theme-neutral-dark text-sm font-bold"
            >
              1000
            </div>
          </div>
          <div
            class="cusror-pointer flex p-1"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxhCb bzWLYJ border-theme-neutral-300 -mr-1"
                >
                  <span
                    class="text-theme-neutral-600"
                  >
                    <div
                      class="sc-AxjAm cpczEI"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                >
                  <img
                    alt="Profile avatar"
                    class="w-11 h-11 rounded-full"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  />
                  <span
                    class="sc-AxirZ cGZUNJ flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxjAm iepfoc"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="sc-fzoyAV bqFbiw"
  >
    <div
      class="sm:px-6 lg:px- px-4"
    >
      <div
        class="md:h-24 relative flex justify-between h-20"
      >
        <div
          class="flex items-center flex-shrink-0"
        >
          <div
            class="bg-logo flex p-2 mr-4 rounded-lg"
          >
            <img
              alt="ARK Logo"
              class="md:h-8 lg:h-10 h-6"
              src="ark-logo.png"
            />
          </div>
          <ul
            class="md:h-24 flex h-20"
          >
            <li
              class="flex"
            >
              <a
                class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  notification.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
          >
            <a
              data-testid="navbar__buttons--send"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </a>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
          >
            <button
              class="sc-AxiKw bMHbXM"
              color="primary"
              data-testid="navbar__buttons--receive"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="p-2 ml-4 text-right"
          >
            <div
              class="text-theme-neutral text-xs"
            >
              Your balance
            </div>
            <div
              class="text-theme-neutral-dark text-sm font-bold"
            >
              1000
            </div>
          </div>
          <div
            class="cusror-pointer flex p-1"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxhCb bzWLYJ border-theme-neutral-300 -mr-1"
                >
                  <span
                    class="text-theme-neutral-600"
                  >
                    <div
                      class="sc-AxjAm cpczEI"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                >
                  <img
                    alt="Profile avatar"
                    class="w-11 h-11 rounded-full"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  />
                  <span
                    class="sc-AxirZ cGZUNJ flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxjAm iepfoc"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`NavigationBar should render with custom menu 1`] = `
<DocumentFragment>
  <nav
    aria-labelledby="main menu"
    class="sc-fzoyAV bqFbiw"
  >
    <div
      class="sm:px-6 lg:px- px-4"
    >
      <div
        class="md:h-24 relative flex justify-between h-20"
      >
        <div
          class="flex items-center flex-shrink-0"
        >
          <div
            class="bg-logo flex p-2 mr-4 rounded-lg"
          >
            <img
              alt="ARK Logo"
              class="md:h-8 lg:h-10 h-6"
              src="ark-logo.png"
            />
          </div>
          <ul
            class="md:h-24 flex h-20"
          >
            <li
              class="flex"
            >
              <a
                class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md text-theme-neutral flex items-center mx-4 font-bold"
                href="/test"
                title="test"
              >
                test
              </a>
            </li>
          </ul>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  notification.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
          >
            <a
              data-testid="navbar__buttons--send"
              href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </a>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="text-theme-primary-300 flex items-center h-full px-6 cursor-pointer"
          >
            <button
              class="sc-AxiKw bMHbXM"
              color="primary"
              data-testid="navbar__buttons--receive"
              type="button"
            >
              <div
                class="sc-AxjAm jmgDQY"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </button>
          </div>
          <div
            class="border-theme-neutral-200 h-8 border-r"
          />
          <div
            class="p-2 ml-4 text-right"
          >
            <div
              class="text-theme-neutral text-xs"
            >
              Your balance
            </div>
            <div
              class="text-theme-neutral-dark text-sm font-bold"
            >
              1000
            </div>
          </div>
          <div
            class="cusror-pointer flex p-1"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxhCb bzWLYJ border-theme-neutral-300 -mr-1"
                >
                  <span
                    class="text-theme-neutral-600"
                  >
                    <div
                      class="sc-AxjAm cpczEI"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                >
                  <img
                    alt="Profile avatar"
                    class="w-11 h-11 rounded-full"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  />
                  <span
                    class="sc-AxirZ cGZUNJ flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxjAm iepfoc"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
